#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(npfs, 0.1, ericvh@gmail.com)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR(fs/ufs.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(npfs, 0.1)

AC_SUBST(VERSION)
AC_SUBST(ac_aux_dir)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST

# Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(arpa/inet.h fcntl.h netdb.h netinet/in.h stdlib.h string.h sys/mount.h sys/socket.h unistd.h utime.h)

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_C_INLINE
AC_TYPE_MODE_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_CHECK_MEMBERS(struct stat.st_rdev)
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_CHOWN
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_ERROR_AT_LINE
AC_FUNC_FORK
AC_FUNC_GETGROUPS
AC_FUNC_LSTAT
AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK
AC_FUNC_MALLOC
AC_FUNC_MKTIME
AC_FUNC_REALLOC
AC_FUNC_STAT
AC_FUNC_STRERROR_R
AC_FUNC_UTIME_NULL
AC_CHECK_FUNCS(dup2 gethostbyname inet_ntoa localtime_r memmove memset mkdir rmdir socket strdup strerror strrchr strtol utime)

AC_CONFIG_FILES(Makefile
                 fs/Makefile
                 libnpfs/Makefile
		 npfs.lsm
		 npfs.spec)
AC_OUTPUT
